# ai-projects

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  apicosts.ipynb  audiotranslationtest.m4a  logprob.ipynb  logprobability.ipynb  meeting_minutes_and_tasks.txt  pyproject.toml  simulateconversation.ipynb
.github/workflows/: oci-retry.yml  python-package.yml
Arch/: 3mnrolling.sql
JL/: AI-Math-Assistant Tool Calling.ipynb  Build Interactive LLM Agents with Tools.ipynb  Build a Smarter Search with LangChain Context Retrieval.ipynb  Explore Advanced Retrievers in LlamaIndex.ipynb  LLM-Powered Data Science LCEL.ipynb  Manual Tool-Calling Agent.ipynb  Similarity Search by Hand.ipynb  Text-to-chart in Jupyter notebook Visualization Agent.ipynb  simulateconversation copy.ipynb
docs/: index.md
src/Dev/Arch/: 3mnrolling.sql  flatjason.py  query.sql
src/ai_toolbox/: __init__.py  cli.py  core.py  main.py  testart.py
src/ai_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_toolbox/cal_coach_app/: app.py
src/ai_toolbox/genai_flask_app/: app.py  config.py  flaskhello.py  itellmchk.py  model.py  sanity.py  testart.py
src/ai_toolbox/gradio/: app_style_finder.py  chatbot.py  dalleimagegen.py  date_actor_modifier.py  helpers.py  imgcaptioning.py  imgprocessor.py  llm_service.py  meeting_assistant.py  pdf_tutor.py  simplespeech2text.py  storytts.py  voice_translator.py  youtubesumqa.py  youtubetoolcallagent.py
tests/: __init__.py  test_core.py  tests_main.py
(+12 files in other folders)
